Conclusion written and some code done

--- a/logistic_regression_classification_2025_weeks8&9.ipynb
+++ b/logistic_regression_classification_2025_weeks8&9.ipynb
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "private-terrorism",
    "metadata": {},
    "outputs": [
@@ -270,10 +270,6 @@
    ],
    "source": [
     "mask_matrix = np.array(sfs_features[p]).T\n",
-    "\n",
-    "#Plotting for 1 pair\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "\n",
     "p = 0  # which pair to plot\n",
     "\n",
@@ -367,12 +363,21 @@
     "\"F\" refers to frontal electrodes; \"T\" = temporal; \"C\" = central; \"P\" = parietal; \"O\" = occipital; \"FC\" = fronto-central, etc. \n",
     "\n",
     "Looking at the matrices of selected features, do one participant's features seem to be more important for the prediction than the other's? \n",
+    "For Pair 1: The dominant participant was B\n",
+    "For pair 2: The dominant participant was A \n",
+    "For pair 3: The dominant participant was B\n",
+    "For pair 4: The dominant participant was A \n",
+    "\n",
+    "In all four pairs, SFS consistently selected features from only one of the two participants across the majority of cross-validation folds. The other participant’s channels were selected randomly, suggesting that their contribution to the classification was weak or inconsistent. For each of the dominant participants. appears to show larger differences in 10 Hz power between the human and computer conditions, making their features more informative for the classifier.\n",
     "\n",
     "Where are the most selected features situated?\n",
     "\n",
     "In this experiment, in each pair one participant emerged as a leader and the other as a follower during the human-interaction. However, in the computer condition, each of the participants followed the computer. The participant in each pair whose features seem to be more important for the prediction was always the leader of the human-interaction. We speculate that the selected features thus tell us something about the neural mechanisms underlying leading behaviour. The follower participant is following in both the human and computer conditions, hence there is less difference in 10 Hz power modulation between the two conditions for this participant. The leading participant, however, follows the computer in the computer-condition, but focuses more on self-generated taps in the human-condition - hence emerging as a \"leader\" in the interaction.\n",
     "\n",
-    "What can you thus conclude about the neural mechanisms underlying leading behaviour, based on the selected features? \n"
+    "What can you thus conclude about the neural mechanisms underlying leading behaviour, based on the selected features? \n",
+    "\n",
+    "Based on the feature-selection patterns, the participant who acted as the leader in each pair showed stronger and more consistent modulation of 10 Hz power between the human-interaction and computer-interaction conditions. This was reflected in the fact that their EEG channels were selected across almost every cross-validation fold, while the follower’s channels were selected at random, which we see as insignificant. In contrast, the follower performs a similar role in both conditions (following the partner in the human condition and the computer in the computer condition), resulting in smaller differences in 10 Hz power and therefore fewer informative features for classification. We may be able to conclude then that the leaders may show an increased cognitive control when generating coordinating actions.\n",
+    "\n"
    ]
   },
   {
